[project]
name = "van-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lachie Stewart", email = "lachiestewart2003@gmail.com" }
]
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.8",
    "mypy>=1.19.0",
]

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/shared",
    "packages/api",
]

[tool.uv]
package = false

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    "G004", # Ignore f-string
]

[tool.pytest]
asyncio_mode = "auto"
